--- a/app/templates/site/index.html
+++ b/app/templates/site/index.html
@@ -8,4 +8,18 @@
   </div>
 </div>
 
+<form method='POST'>
+<div class='row'>
+{% for f in form %}
+  <div class='small-6 columns'>
+    {{ f.label }}
+    {{ f }}
+</div>
+{% endfor %}
+<div class='small-2 small-centered columns'>
+<input type='submit' class='primary button expanded' value='submit'>
+</div>
+</div>
+</form>
+
 {% endblock %}
